Function `plink_glm` added option `vif`; other minor edits

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: genbin
 Title: R wrappers for binaries in genetics
-Version: 0.0.2.9000
+Version: 0.0.3.9000
 Authors@R: 
     person(given = "Alejandro",
 	   family = "Ochoa",
@@ -12,7 +12,7 @@ License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Imports:
     readr,
     genio,
@@ -20,3 +20,5 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+URL: https://github.com/OchoaLab/genbin
+BugReports: https://github.com/OchoaLab/genbin/issues
