Added functions `plink_hardy`, `read_plink_hardy`, and `delete_files_plink_hardy`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(delete_files_log)
 export(delete_files_logtxt)
 export(delete_files_pca)
 export(delete_files_plink_glm)
+export(delete_files_plink_hardy)
 export(delete_files_tped)
 export(emmax_kin)
 export(emmax_lmm)
@@ -21,6 +22,7 @@ export(gemma_kin)
 export(gemma_lmm)
 export(plink1_bed_to_tped)
 export(plink_glm)
+export(plink_hardy)
 export(plink_pca)
 export(read_bolt_lmm)
 export(read_emmax_ps)
@@ -28,5 +30,6 @@ export(read_gcta_hsq)
 export(read_gcta_mlma)
 export(read_gemma_assoc)
 export(read_plink_glm)
+export(read_plink_hardy)
 export(require_files_tped)
 export(system3)
